made Login/Sign Up page work and initialized some recipes into categories

--- a/FlavourFlow/Components/_Imports.razor
+++ b/FlavourFlow/Components/_Imports.razor
@@ -9,3 +9,7 @@
 @using Microsoft.JSInterop
 @using FlavourFlow
 @using FlavourFlow.Components
+@using FlavourFlow.Components.Account
+@using FlavourFlow.Components.Layout
+@using FlavourFlow.Components.Account.Shared
+@using FlavourFlow.Models
