--- a/FlavourFlow/Components/Pages/CusinePage.razor
+++ b/FlavourFlow/Components/Pages/CusinePage.razor
@@ -1,6 +1,7 @@
 ﻿@page "/cuisine/{CuisineName}"
-@inject FlavourFlow.Services.RecipeService RecipeService
+@inject RecipeService RecipeService
 @using FlavourFlow.Domains
+@using FlavourFlow.Services
 
 <PageTitle>@CuisineName Cuisine - FlavorFlow</PageTitle>
 
