--- a/FlavourFlow/Components/_Imports.razor
+++ b/FlavourFlow/Components/_Imports.razor
@@ -3,13 +3,12 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
-@using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
-@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.JSInterop
 @using FlavourFlow
 @using FlavourFlow.Components
-@using FlavourFlow.Components.Account
-@using FlavourFlow.Components.Layout
-@using FlavourFlow.Components.Account.Shared
-@using FlavourFlow.Models
+@using FlavourFlow.Components.Layout   
+@using FlavourFlow.Components.Account  
+@using FlavourFlow.Services
+@using FlavourFlow.Domains
+@using FlavourFlow.Data
